Ap doc correction
