# public/swagger/swagger.json
@@ -74,12 +74,13 @@
                                     "type": "string",
                                     "example": "David"
                                 },
+                                "f_name": {
+                                    "type": "string",
+                                    "example": "Mouret"
+                                },
                                 "roles": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "string",
-                                        "example": "CLIENT"
-                                    }
+                                    "type": "string",
+                                    "example": "CLIENT"
                                 }
                             },
                             "type": "object"
@@ -134,6 +135,47 @@
                                         "category_id": "2"
                                     }
                                 ]
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/getProductById": {
+            "get": {
+                "operationId": "10dce8eae80c6a3f224ea53332e9f6c0",
+                "parameters": [
+                    {
+                        "name": "request",
+                        "in": "header",
+                        "schema": {
+                            "properties": {
+                                "product_id": {
+                                    "type": "integer",
+                                    "example": "9"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Renvoie un produit.",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "id": "1",
+                                    "name": "Tradition",
+                                    "price": "1.20",
+                                    "description": "La baguette tradition au levain naturel et farine bio.",
+                                    "compo": "",
+                                    "tash": false,
+                                    "image": "",
+                                    "weight": "",
+                                    "category_id": "2"
+                                }
                             }
                         }
                     }
@@ -212,6 +254,108 @@
                                 "example": {
                                     "message": "bravo tu as réussis !",
                                     "contain_id": "3"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/getContainsForCart": {
+            "post": {
+                "operationId": "debf2ed3361972772a392efae040490d",
+                "parameters": [
+                    {
+                        "name": "request",
+                        "in": "header",
+                        "schema": {
+                            "properties": {
+                                "cart_id": {
+                                    "type": "integer",
+                                    "example": "2"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Recupère le contenu d'un panier.",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "list": [
+                                        {
+                                            "id": "21",
+                                            "cart_id": "2",
+                                            "quantity": "4",
+                                            "trash": 0,
+                                            "product": {
+                                                "id": "5",
+                                                "name": "Barbu du Roussillon",
+                                                "price": "11,30",
+                                                "description": "Pain semi complet au levain naturel et ancienne farine (prix au kilo).",
+                                                "compo": "",
+                                                "trash": false,
+                                                "image": "",
+                                                "weight": "",
+                                                "category_id": "2"
+                                            }
+                                        },
+                                        {
+                                            "id": "22",
+                                            "cart_id": "2",
+                                            "quantity": "25",
+                                            "trash": 0,
+                                            "product": {
+                                                "id": "4",
+                                                "name": "Complet",
+                                                "price": "4,00",
+                                                "description": "Pain complet au levain naturel et faire bio (prix au kilo).",
+                                                "compo": "",
+                                                "trash": false,
+                                                "image": "",
+                                                "weight": "",
+                                                "category_id": "2"
+                                            }
+                                        },
+                                        {
+                                            "id": "23",
+                                            "cart_id": "2",
+                                            "quantity": "4",
+                                            "trash": 0,
+                                            "product": {
+                                                "id": "1",
+                                                "name": "Tradition",
+                                                "price": "1.20",
+                                                "description": "La baguette tradition au levain naturel et farine bio.",
+                                                "compo": "",
+                                                "trash": false,
+                                                "image": "",
+                                                "weight": "",
+                                                "category_id": "2"
+                                            }
+                                        },
+                                        {
+                                            "id": "24",
+                                            "cart_id": "2",
+                                            "quantity": "2",
+                                            "trash": 0,
+                                            "product": {
+                                                "id": "2",
+                                                "name": "Tradi-graine",
+                                                "price": "1,30",
+                                                "description": "Une baguette tradition avec un petit twist.",
+                                                "compo": "",
+                                                "trash": false,
+                                                "image": "",
+                                                "weight": "",
+                                                "category_id": "2"
+                                            }
+                                        }
+                                    ]
                                 }
                             }
                         }
